--- a/app/views/posts/login.html.erb
+++ b/app/views/posts/login.html.erb
@@ -99,7 +99,7 @@ a:active {
   	  </tr>  	  
   	  <tr>
   	    <td>Password:</td>
-  	    <td><input name="poster" id="form_pass" type="text" size="30" maxlength="50" class="post_form_headers"/></td>
+  	    <td><input name="poster" id="form_pass" type="password" size="30" maxlength="50" class="post_form_headers"/></td>
   	  </tr>
   	  <tr>
   	    <td></td>
